--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: 郭晋宇的技术博客
+subtitle: Android及其周边
 description:
-author: GuoJinyu
-language:
+author: 郭晋宇
+language: zh-Hans
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://guojinyu.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
