--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -6,10 +6,10 @@ menu:
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
+  github: "https://github.com/GuoJinyu"
+  weibo: "http://weibo.com/rescueq"
   rss: "#"
-  zhihu: "#"
+  zhihu: "https://www.zhihu.com/people/ackerkwok"
   #douban: "#"
   #mail: "#"
   #facebook: "#"
@@ -32,16 +32,16 @@ open_in_new: false
 
 # Miscellaneous
 google_analytics: ''
-favicon: /favicon.png
+favicon: /assets/images/favicon.png
 
 #你的头像url
-avatar:
+avatar: /assets/images/avatar.png
 #是否开启分享
 share_jia: true
 share_addthis: false
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
-duoshuo: true
+duoshuo: "acker"
 #是否开启云标签
 tagcloud: true
 
@@ -50,15 +50,10 @@ tagcloud: true
 #friends: false
 #开启——
 friends:
-  奥巴马的博客: http://localhost:4000/
-  卡卡的美丽传说: http://localhost:4000/
-  本泽马的博客: http://localhost:4000/
-  吉格斯的博客: http://localhost:4000/
-  习大大大不同: http://localhost:4000/
-  托蒂的博客: http://localhost:4000/
+  #奥巴马的博客: http://localhost:4000/
 
 #是否开启“关于我”。
 #不开启——
 #aboutme: false
 #开启——
-aboutme: 我是谁，我从哪里来，我到哪里去？我就是我，是颜色不一样的吃货…
+aboutme: 世人皆醒我独醉
