--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -1,15 +1,16 @@
 # Header
-
 menu:
   主页: /
-  随笔: /tags/随笔
+  博文: /archives
+  读书: /douban
+  # 随笔: /tags/随笔
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
+  github: "https://github.com/GuoJinyu"
+  weibo: "http://weibo.com/rescueq"
+  rss: /atom.xml
+  zhihu: "https://www.zhihu.com/people/ackerkwok"
   #douban: "#"
   #mail: "#"
   #facebook: "#"
@@ -19,15 +20,10 @@ subnav:
 
 rss: /atom.xml
 
-# 是否需要修改 root 路径
-# 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，
-# 请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/。
-root: 
-
 # Content
 excerpt_link: more
 fancybox: true
-mathjax: false
+mathjax: true
 
 # 是否开启动画效果
 animate: true
@@ -36,24 +32,19 @@ animate: true
 open_in_new: false
 
 # Miscellaneous
-google_analytics: ''
-favicon: /favicon.png
+google_analytics: 'UA-61761428-1'
+favicon: /assets/images/favicon.png
 
 #你的头像url
-avatar:
-
+avatar: /assets/images/avatar.png
 #是否开启分享
 share_jia: true
 share_addthis: false
-
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
-duoshuo: false
-
-# 如不需要，将该项置为false
-# 比如
-#smart_menu:
-#  friends: false
+duoshuo: "acker"
+#是否开启云标签
+tagcloud: true
 
 smart_menu:
   innerArchive: '所有文章'
@@ -61,12 +52,18 @@ smart_menu:
   friends: '友链'
   aboutme: '关于我'
 
+#是否开启友情链接
+#不开启——
+#friends: false
+#开启——
 friends:
-  友情链接1: http://localhost:4000/
-  友情链接2: http://localhost:4000/
-  友情链接3: http://localhost:4000/
-  友情链接4: http://localhost:4000/
-  友情链接5: http://localhost:4000/
-  友情链接6: http://localhost:4000/
+  Yikun: http://yikun.github.io/
 
-aboutme: 很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+#是否开启“关于我”。
+#不开启——
+#aboutme: false
+#开启——
+aboutme: 世人皆醒我独醉
+
+
+
