--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -43,8 +43,6 @@ share_addthis: false
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
 duoshuo: "acker"
-#是否开启云标签
-tagcloud: true
 
 smart_menu:
   innerArchive: '所有文章'
@@ -63,7 +61,7 @@ friends:
 #不开启——
 #aboutme: false
 #开启——
-aboutme: 世人皆醒我独醉
+aboutme: 帝都小码农，完美主义者
 
 
 
