--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,11 @@ theme: yilia
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git
   repo: git@github.com:GuoJinyu/guojinyu.github.io.git
+  branch: master
+- type: git
+  repo: https://git.coding.net/AckerKwok/AckerKwok.coding.me.git
   branch: master
 
 douban:
